# shoe_shmup

./: Cargo.toml  README.md  index.html
.github/workflows/: release.yaml
assets/audio/: empty_clip.sfs  explode.sfs  player_death.sfs  reload.sfs
assets/levels/: level1.scn.ron  temp.ron
src/: actions.rs  audio.rs  bullet.rs  constants.rs  enemy.rs  lib.rs  loading.rs  main.rs  menu.rs  pause_menu.rs  physics.rs  player.rs  player_rail.rs  serialize.rs
