[package]
name = "shoe_shmup"
version = "0.1.0"
publish = false
authors = ["Mike Hsu <mike.hsu@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg",
    "bevy_kira_audio/wav"
]

dev = [
    "bevy/dynamic",
]

[dependencies]
async-compat = "0.2"
bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_scene"] }
bevy_prototype_lyon = "0.6"
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12" }
rand = "0.8.3"
impacted = { version = "1", features = ["bevy-08"] }
futures-lite = "1.4.0"
tokio = { version = "1.16", default-features = false, features = ["fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"
